[tool.poetry]
name = "extended-visual-secret-sharing"
version = "0.1.0"
description = ""
authors = ["mitk23 <mitk232@gmail.com>"]
readme = "README.md"
packages = [{include = "extended_visual_secret_sharing"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
